--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Draw Text</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lora&family=Open+Sans&family=Tinos&family=Roboto&family=Russo+One&family=Press+Start+2P&display=swap" rel="stylesheet">
   <style>
     #canvasContainer {
       border: 1px solid #c3c3c3;
@@ -48,39 +50,23 @@
           <select id="text-block" class="form-select" onchange="setText()">
             <option value="digits">Digits 0-9</option>
             <option value="en-monts">(en) Monts</option>
-            <option value="en-monts_up">(en) Monts Uppercase</option>
             <option value="en-monts3">(en) Monts short</option>
-            <option value="en-monts3_up">(en) Monts short Uppercase</option>
             <option value="en-weekdays">(en) Weekdays</option>
-            <option value="en-weekdays_up">(en) Weekdays Uppercase</option>
             <option value="en-weekdays3">(en) Weekdays short 3</option>
-            <option value="en-weekdays3_up">(en) Weekdays short 3 Uppercase</option>
             <option value="en-weekdays2">(en) Weekdays short 2</option>
-            <option value="en-weekdays2_up">(en) Weekdays short 2 Uppercase</option>
             <option value="ru-monts">(ru) Monts</option>
-            <option value="ru-monts_up">(ru) Monts Uppercase</option>
             <option value="ru-monts3">(ru) Monts short</option>
-            <option value="ru-monts3_up">(ru) Monts short Uppercase</option>
             <option value="ru-weekdays">(ru) Weekdays</option>
-            <option value="ru-weekdays_up">(ru) Weekdays Uppercase</option>
             <option value="ru-weekdays3">(ru) Weekdays short 3</option>
-            <option value="ru-weekdays3_up">(ru) Weekdays short 3 Uppercase</option>
             <option value="ru-weekdays2">(ru) Weekdays short 2</option>
-            <option value="ru-weekdays2_up">(ru) Weekdays short 2 Uppercase</option>
-
+          </select>
+          <select id="text-var" class="form-select" onchange="setText()">
+            <option value="">Lower case</option>
+            <option value="_cap">Capitalize First Letter</option>
+            <option value="_up">UPPER CASE</option>
           </select>
         </div>
-        <textarea id="myText" class="form-control" rows="12">
-0
-1
-2
-3
-4
-5
-6
-7
-8
-9</textarea>
+        <textarea id="myText" class="form-control" rows="12"></textarea>
       </div>
     </div>
     <div class="card mt-3">
@@ -89,9 +75,20 @@
       </div>
       <div class="card-body">
         <div class="input-group input-group-sm mb-1">
-          <span class="input-group-text">Font</span>
+          <span class="input-group-text">Built in font</span>
+          <select id="font-builtin" class="form-select" onchange="drawText()">
+            <option style="font-family: 'Open Sans'" value="Open Sans">Open Sans</option>
+            <option style="font-family: Roboto" value="Roboto">Roboto</option>
+            <option style="font-family: Lora" value="Lora">Lora</option>
+            <option style="font-family: 'Bebas Neue'" value="Bebas Neue">Bebas Neue</option>
+            <option style="font-family: 'Russo One'" value="Russo One">Russo One</option>
+            <option style="font-family: 'Press Start 2P'" value="Press Start 2P">Press Start 2P</option>
+          </select>
+          <span class="input-group-text">Custom font</span>
           <input type="file" class="form-control form-control-sm" id="font-input" name="font-input" accept=".ttf,.otf">
-          <button type="button" class="btn btn-danger" onclick="removeCustomFont()" title="clear font input">x</button>
+          <button type="button" class="btn btn-danger" onclick="removeCustomFont()" title="clear custom font">x</button>
+        </div>
+        <div class="input-group input-group-sm mb-1">
           <span class="input-group-text">Size, px</span>
           <input type="number" class="form-control form-control-sm" id="font-size" name="font-size" min="1" step="1"
             value="20" onchange="drawText()">
@@ -138,7 +135,7 @@
               name="backgroundcolor" value="#000000" onchange="drawText()">
           </div>
           <div class="input-group-text">
-            <input type="checkbox" class="form-check-input me-3" id="removeblack" name="removeblack" value="removeblack"
+            <input type="checkbox" class="form-check-input me-3" id="removeblack" name="removeblack" value="removeblack" checked
               onchange="drawText()">
             <label class="form-check-label" for="removeblack"> background color to alpha</label>
           </div>
