--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
           </select>
         </div>
         <div class="input-group input-group-sm mb-1">
+          <span class="input-group-text">Spacing, px</span>
+          <input type="number" class="form-control form-control-sm" id="letterSpacing" name="letterSpacing" step="1"
+            value="0" onchange="drawText()">
           <span class="input-group-text">Text align</span>
     
           <select id="align" class="form-select" onchange="drawText()">
