fix download more as 10 canvas at once

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       /* font-smooth: never;
   -webkit-font-smoothing : none; */
     }
+    #canvasContainer > * {
+      display: block;
+    }
   </style>
 </head>
 
