--- a/index.html
+++ b/index.html
@@ -58,11 +58,18 @@
             <option value="en-weekdays">(en) Weekdays</option>
             <option value="en-weekdays3">(en) Weekdays short 3</option>
             <option value="en-weekdays2">(en) Weekdays short 2</option>
+
             <option value="ru-monts">(ru) Monts</option>
             <option value="ru-monts3">(ru) Monts short</option>
             <option value="ru-weekdays">(ru) Weekdays</option>
             <option value="ru-weekdays3">(ru) Weekdays short 3</option>
             <option value="ru-weekdays2">(ru) Weekdays short 2</option>
+
+            <option value="ua-monts">(ua) Monts</option>
+            <option value="ua-monts3">(ua) Monts short</option>
+            <option value="ua-weekdays">(ua) Weekdays</option>
+            <option value="ua-weekdays3">(ua) Weekdays short 3</option>
+            <option value="ua-weekdays2">(ua) Weekdays short 2</option>
           </select>
           <select id="text-var" class="form-select" onchange="setText()">
             <option value="">Lower case</option>
