--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <option value="en-weekdays3">(en) Weekdays short 3</option>
             <option value="en-weekdays2">(en) Weekdays short 2</option>
 
+            <option value="de-monts">(de) Monts</option>
+            <option value="de-monts3">(de) Monts short</option>
+            <option value="de-weekdays">(de) Weekdays</option>
+            <option value="de-weekdays3">(de) Weekdays short 3</option>
+            <option value="de-weekdays2">(de) Weekdays short 2</option>
+
             <option value="ru-monts">(ru) Monts</option>
             <option value="ru-monts3">(ru) Monts short</option>
             <option value="ru-weekdays">(ru) Weekdays</option>
