--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
             <option value="italic">Italic</option>
             <option value="italic bold">Italic Bold</option>
           </select>
+          <span class="input-group-text">Stretch</span>
+          <select id="font-stretch" class="form-select" onchange="drawText()">
+            <option value="">normal</option>
+            <option value="ultra-condensed">ultra-condensed</option>
+            <option value="extra-condensed">extra-condensed</option>
+            <option value="condensed">condensed</option>
+            <option value="semi-condensed">semi-condensed</option>
+            <option value="semi-expanded">semi-expanded</option>
+            <option value="expanded">expanded</option>
+            <option value="ultra-expanded">ultra-expanded</option>
+          </select>
         </div>
         <div class="input-group input-group-sm mb-1">
           <span class="input-group-text">Spacing, px</span>
